--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,9 +8,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
         android:layout_marginStart="12dp"
-        android:contextClickable="false"
         android:padding="20dp"
-        android:text="Username"
+        android:text="@string/Username"
         android:textSize="18sp"
         android:layout_above="@+id/txvPassword"
         android:layout_alignParentLeft="true"
@@ -38,22 +37,19 @@
         android:layout_alignLeft="@+id/txvUsername"
         android:layout_alignStart="@+id/txvUsername"
         android:layout_centerVertical="true"
-        android:contextClickable="false"
         android:padding="20dp"
-        android:text="Password"
+        android:text="@string/Password"
         android:textSize="18sp" />
 
     <EditText
         android:id="@+id/edtPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/edtUsername"
-        android:layout_toRightOf="@+id/txvUsername"
         android:ems="10"
         android:inputType="textPassword"
-        android:layout_alignBottom="@+id/txvPassword"
-        android:layout_alignRight="@+id/edtUsername"
-        android:layout_alignEnd="@+id/edtUsername" />
+        android:layout_below="@+id/txvUsername"
+        android:layout_toRightOf="@+id/txvUsername"
+        android:layout_toEndOf="@+id/txvUsername" />
 
     <Button
         android:id="@+id/btnLogin"
@@ -62,11 +58,10 @@
         android:layout_below="@+id/edtPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="53dp"
-        android:onClick="btnLogin_clicked"
         android:paddingBottom="20dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:paddingTop="20dp"
-        android:text="Login" />
+        android:text="@string/btnLogin" />
 
 </RelativeLayout>
