--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/mniAddUser"
-        android:title="add Player" />
+        android:title="@string/mniAdd" />
     <item
         android:id="@+id/mniEditUser"
-        android:title="edit Player" />
+        android:title="@string/mniEdit" />
 </menu>
