--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
         android:textSize="18sp" />
 
     <EditText
-        android:id="@+id/edtPassword"
+        android:id="@+id/edtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -56,7 +56,7 @@
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/edtPassword"
+        android:layout_below="@+id/edtName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="53dp"
         android:paddingBottom="20dp"
