--- a/app/src/main/res/layout/activity_team_managment.xml
+++ b/app/src/main/res/layout/activity_team_managment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="group2.schoolproject.a02soccer.TeamManagmentActivity">
+    tools:context="pkgTab.TeamManagmentActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
