--- a/app/src/main/res/menu/menu_team_managment.xml
+++ b/app/src/main/res/menu/menu_team_managment.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="group2.schoolproject.a02soccer.TeamManagmentActivity">
+    tools:context="group2.schoolproject.a02soccer.pkgTab.TeamManagmentActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
