--- a/app/src/main/res/layout/tab_team1.xml
+++ b/app/src/main/res/layout/tab_team1.xml
@@ -8,11 +8,12 @@
         android:layout_height="155dp">
 
         <TableLayout
+            android:id="@+id/tableTeam1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TableRow
-                android:id="@+id/rowlul"
+                android:id="@+id/rowTeam1Header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -30,11 +31,17 @@
                     android:layout_weight="1"
                     android:text="Position" />
 
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/textView8"
@@ -45,8 +52,16 @@
 
                 <Spinner
                     android:id="@+id/Team1Spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2" />
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Add" />
 
             </TableRow>
 
