--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,6 +8,16 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/lsvEditableGames"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
+
     <include
         layout="@layout/app_bar_main2"
         android:layout_width="match_parent"
@@ -22,4 +32,19 @@
         app:headerLayout="@layout/nav_header_main2"
         app:menu="@menu/activity_main2_drawer" />
 
+    <!--  <RelativeLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent">
+
+        <ListView
+             android:id="@+id/lsvEditableGames"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:layout_alignParentLeft="true"
+             android:layout_alignParentStart="true"
+             android:layout_alignParentTop="true" />
+
+     </RelativeLayout> -->
+
 </android.support.v4.widget.DrawerLayout>
+
