--- a/app/src/main/res/layout/activity_add_game_enter_data.xml
+++ b/app/src/main/res/layout/activity_add_game_enter_data.xml
@@ -59,6 +59,7 @@
                 android:gravity="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="18sp"
+                android:layout_marginLeft="10dp"
                 android:layout_below="@+id/txtScore"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -71,6 +72,7 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:width="250dp"
+                android:layout_marginRight="10dp"
                 android:layout_below="@+id/txtScore"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
