--- a/app/src/main/res/layout/activity_addplayer.xml
+++ b/app/src/main/res/layout/activity_addplayer.xml
@@ -3,38 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingTop="20dp"
-        android:text="@string/btnCancel"
-        android:layout_marginRight="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_alignBaseline="@+id/btnAdd"
-        android:layout_alignBottom="@+id/btnAdd"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="45dp"
-        android:layout_marginLeft="57dp"
-        android:layout_marginStart="57dp"
-        android:paddingBottom="20dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingTop="20dp"
-        android:text="@string/btnAdd"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <EditText
         android:id="@+id/edtPassword"
         android:layout_width="wrap_content"
@@ -119,5 +87,23 @@
         android:layout_below="@+id/txtName"
         android:layout_toRightOf="@+id/txtName"
         android:layout_toEndOf="@+id/txtName" />
+
+    <Button
+        android:id="@+id/btnCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnCancel"
+        android:layout_below="@+id/ckbIsAdmin"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="200dp"/>
+
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnAdd"
+        android:layout_below="@+id/ckbIsAdmin"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="200dp" />
 
 </RelativeLayout>
