--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#6E7168</item>
+        <item name="colorPrimaryDark">#6E7168</item>
+        <item name="colorAccent">#6E7168</item>
+    </style>
+
+    <style name="buttonStyle">
+        <item name="android:background">@drawable/buttonshape</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
