--- a/app/src/main/res/layout/activity_add_game_enter_data.xml
+++ b/app/src/main/res/layout/activity_add_game_enter_data.xml
@@ -48,6 +48,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentStart="true"
                 android:paddingTop="10dp"
+                android:gravity="center"
                 android:paddingBottom="10dp"
                 android:textSize="24sp" />
 
