--- a/app/src/main/res/layout/activity_team_managment.xml
+++ b/app/src/main/res/layout/activity_team_managment.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".TeamManagmentActivity">
+    tools:context=".TeamManagmentActivity"
+    android:background="@drawable/background">
 
     <RelativeLayout
         android:layout_width="match_parent"
