--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -8,7 +8,8 @@
     tools:context="group2.schoolproject.a02soccer.MainActivity"
     tools:showIn="@layout/app_bar_main2"
     tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:layout_editor_absoluteX="0dp"
+    android:background="@drawable/background">
 
     <ListView
         android:id="@+id/lsvEditableGames"
