--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -4,15 +4,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@id/mniAddPlayer"
-            android:icon="@drawable/ic_penis"
+            android:icon="@drawable/ic_mosquito"
             android:title="@string/mniAdd" />
         <item
             android:id="@+id/mniAddGame"
-            android:icon="@drawable/ic_penis"
+            android:icon="@drawable/ic_mosquito"
             android:title="@string/mniAddGame" />
         <item
             android:id="@+id/mniEditPlayer"
-            android:icon="@drawable/ic_penis"
+            android:icon="@drawable/ic_mosquito"
             android:title="@string/mniEdit" />
         <item
             android:id="@+id/nav_manage"
@@ -24,11 +24,11 @@
         <menu>
             <item
                 android:id="@+id/mniLogin"
-                android:icon="@drawable/ic_penis"
+                android:icon="@drawable/ic_mosquito"
                 android:title="@string/mniLogin" />
             <item
                 android:id="@+id/nav_send"
-                android:icon="@drawable/ic_penis"
+                android:icon="@drawable/ic_mosquito"
                 android:title="Send" />
         </menu>
     </item>
