--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,8 @@
         android:layout_toRightOf="@+id/txvUsername"
         android:ems="10"
         android:inputType="textPersonName"
+        android:selectAllOnFocus="false"
+        android:singleLine="false"
         android:text="admin" />
 
     <TextView
@@ -47,11 +49,11 @@
         android:id="@+id/edtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword"
         android:layout_below="@+id/txvUsername"
+        android:layout_toEndOf="@+id/txvUsername"
         android:layout_toRightOf="@+id/txvUsername"
-        android:layout_toEndOf="@+id/txvUsername" />
+        android:ems="10"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btnLogin"
