--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -19,7 +19,7 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#ffe88661"
+        android:color="#BC4C31"
         />
 
 </shape>
