--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,9 @@
     </style>
 
     <style name="Theme.App.Base" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">#4F575B</item>
+        <item name="colorPrimaryDark">#4F575B</item>
+        <item name="colorAccent">#4F575B</item>
         <item name="colorControlNormal">#BC4C31</item>
         <item name="colorControlActivated">#BC4C31</item>
         <item name="colorControlHighlight">#BC4C31</item>
