--- a/app/src/main/res/layout/activity_add_game_enter_data.xml
+++ b/app/src/main/res/layout/activity_add_game_enter_data.xml
@@ -87,27 +87,29 @@
 
             <Button
                 android:id="@+id/btnBack"
+                style="@style/buttonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/btnBack"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="10dp"
+                android:layout_alignParentTop="true"
                 android:layout_marginLeft="34dp"
-                android:layout_marginStart="34dp" />
+                android:layout_marginStart="34dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/btnBack" />
 
             <Button
                 android:id="@+id/btnSave"
+                style="@style/buttonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/btnSave"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="31dp"
                 android:layout_marginRight="31dp"
-                android:layout_marginEnd="31dp" />
+                android:layout_marginTop="10dp"
+                android:text="@string/btnSave" />
         </RelativeLayout>
     </RelativeLayout>
 
