--- a/app/src/main/res/layout/tab_team2.xml
+++ b/app/src/main/res/layout/tab_team2.xml
@@ -9,6 +9,7 @@
 
         <Button
             android:id="@+id/tab2btn"
+            style="@style/buttonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
