removed tab line

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="colorControlActivated">#BC4C31</item>
         <item name="colorControlHighlight">#BC4C31</item>
         <item name="android:button">@style/buttonStyle</item>
+        <item name="android:tabStripEnabled">false</item>
     </style>
 
     <style name="buttonStyle">
