Teameinteilung fertig, code noch unsauber,wird noch verbessert, Css geht nicht, buttons sind dann nur mehr text

--- a/app/src/main/res/layout/activity_team_managment.xml
+++ b/app/src/main/res/layout/activity_team_managment.xml
@@ -31,9 +31,23 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_below="@+id/appbar" />
+            android:layout_height="420dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/appbar"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        <Button
+            android:id="@+id/btnSave"
+            style="@style/buttonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/container"
+            android:layout_marginEnd="53dp"
+            android:layout_marginRight="53dp"
+            android:text="Button" />
 
     </RelativeLayout>
 
