--- a/app/src/main/res/layout/fragment_add_game_enter_data.xml
+++ b/app/src/main/res/layout/fragment_add_game_enter_data.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,15 +11,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:stretchColumns="0"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_alignTop="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/table_PlayersHeader">
+        android:layout_marginTop="13dp"
+        android:id="@+id/table_PlayersHeader"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <TableRow>
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_column="0"
@@ -26,42 +26,48 @@
                 android:text="@string/Name"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_column="1"
-                android:layout_weight="1"
-                android:text="@string/GoalsShotDefault"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_column="2"
-                android:layout_weight="1"
-                android:text="@string/GoalsShotHead"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_column="3"
-                android:layout_weight="1"
-                android:text="@string/GoalsShotHeadSnow"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_column="4"
-                android:layout_weight="1"
-                android:text="@string/GoalsShotPenalty"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_column="5"
-                android:layout_weight="1"
-                android:text="@string/GoalsGot"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_column="6"
-                android:layout_weight="1"
-                android:text="@string/Nutmeg"
-                android:textStyle="bold" />
+            <ImageButton
+                android:id="@+id/icGoalShot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:srcCompat="@drawable/ic_goalshot" />
+
+            <ImageButton
+                android:id="@+id/icGoalHead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:srcCompat="@drawable/ic_headgoal" />
+
+            <ImageButton
+                android:id="@+id/icGoalSnow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:srcCompat="@drawable/ic_headgoal_snow" />
+
+            <ImageButton
+                android:id="@+id/icPenalty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:srcCompat="@drawable/ic_penalty" />
+
+            <ImageButton
+                android:id="@+id/icGoalGot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:srcCompat="@drawable/ic_goalgot" />
+
+            <ImageButton
+                android:id="@+id/icNutmeg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:srcCompat="@drawable/ic_nutmeg" />
+
         </TableRow>
 
     </TableLayout>
