--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,4 +69,14 @@
         android:text="@string/btnLogin"
         style="@style/buttonStyle"/>
 
+    <ProgressBar
+        android:id="@+id/progressIndicator"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnLogin"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        android:layout_marginTop="24dp" />
+
 </RelativeLayout>
