--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -27,9 +27,9 @@
                 android:icon="@drawable/ic_mosquito"
                 android:title="@string/mniLogin" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_mosquito"
-                android:title="Send" />
+                android:title="@string/nav_settings_title" />
         </menu>
     </item>
 
